@@ -1,10 +1,10 @@
 /* XPM */
 static char * gerbv_icon_xpm[] = {
-"48 48 104 2",
+"48 48 244 2",
 "  	c None",
-". 	c #219494",
+". 	c #1F8888",
 "+ 	c #000000",
-"@ 	c #2CC4C4",
+"@ 	c #2CC2C2",
 "# 	c #37F2F2",
 "$ 	c #000200",
 "% 	c #010401",
@@ -18,137 +18,277 @@ static char * gerbv_icon_xpm[] = {
 "' 	c #0B2308",
 ") 	c #0F300B",
 "! 	c #12380D",
-"~ 	c #040F03",
-"{ 	c #0C2709",
-"] 	c #174811",
-"^ 	c #236C1A",
-"/ 	c #2C8721",
-"( 	c #309424",
-"_ 	c #020802",
-": 	c #081A06",
-"< 	c #12370D",
-"[ 	c #206318",
-"} 	c #2D8C22",
-"| 	c #35A328",
-"1 	c #37AA29",
-"2 	c #39AF2B",
-"3 	c #38AD2A",
-"4 	c #339E26",
-"5 	c #216619",
-"6 	c #0A1F07",
-"7 	c #154310",
-"8 	c #26741C",
-"9 	c #329B26",
-"0 	c #38AC2A",
-"a 	c #0A2008",
-"b 	c #174611",
-"c 	c #27781D",
-"d 	c #339F27",
-"e 	c #091E07",
-"f 	c #143F0F",
-"g 	c #236D1A",
-"h 	c #309624",
-"i 	c #37A929",
-"j 	c #38AE2A",
-"k 	c #020601",
-"l 	c #1C5715",
-"m 	c #297F1F",
-"n 	c #329925",
-"o 	c #35A428",
-"p 	c #030A02",
-"q 	c #133A0E",
-"r 	c #1D5B16",
-"s 	c #26761D",
-"t 	c #2B8520",
-"u 	c #39FCFC",
-"v 	c #061405",
-"w 	c #0D2809",
-"x 	c #15400F",
-"y 	c #1C5615",
-"z 	c #1F6117",
-"A 	c #35EAEA",
-"B 	c #061204",
-"C 	c #133D0F",
-"D 	c #1A5114",
-"E 	c #2ECBCB",
-"F 	c #081B06",
-"G 	c #10320C",
-"H 	c #1B5314",
-"I 	c #236E1B",
-"J 	c #287B1E",
-"K 	c #2AB9B9",
-"L 	c #37F4F4",
-"M 	c #051104",
-"N 	c #0E2B0A",
-"O 	c #194F13",
-"P 	c #2F9123",
-"Q 	c #339D26",
-"R 	c #000202",
-"S 	c #133B0E",
-"T 	c #226919",
-"U 	c #36A628",
-"V 	c #000101",
-"W 	c #0A1E07",
-"X 	c #164410",
-"Y 	c #216819",
-"Z 	c #2F9023",
-"` 	c #37AB2A",
-" .	c #051204",
-"..	c #0D280A",
-"+.	c #184B12",
-"@.	c #246E1B",
-"#.	c #020701",
-"$.	c #0B2108",
-"%.	c #11350D",
-"&.	c #164611",
-"*.	c #1A4F13",
-"=.	c #216518",
-"-.	c #1F6017",
-";.	c #FF1616",
+"~ 	c #1D8383",
+"{ 	c #2BC0C0",
+"] 	c #2AB9B9",
+"^ 	c #155E5E",
+"/ 	c #051717",
+"( 	c #040F03",
+"_ 	c #0C2709",
+": 	c #174811",
+"< 	c #236C1A",
+"[ 	c #2C8721",
+"} 	c #309424",
+"| 	c #020802",
+"1 	c #081A06",
+"2 	c #12370D",
+"3 	c #206318",
+"4 	c #2D8C22",
+"5 	c #35A328",
+"6 	c #37AA29",
+"7 	c #39AF2B",
+"8 	c #38AD2A",
+"9 	c #339D26",
+"0 	c #1D5A16",
+"a 	c #051204",
+"b 	c #0A1F07",
+"c 	c #154310",
+"d 	c #26741C",
+"e 	c #329B26",
+"f 	c #38AC2A",
+"g 	c #1D5916",
+"h 	c #0A2008",
+"i 	c #174611",
+"j 	c #27781D",
+"k 	c #339F27",
+"l 	c #051104",
+"m 	c #091E07",
+"n 	c #143F0F",
+"o 	c #236D1A",
+"p 	c #309624",
+"q 	c #37A929",
+"r 	c #38AE2A",
+"s 	c #020601",
+"t 	c #1C5715",
+"u 	c #297F1F",
+"v 	c #329925",
+"w 	c #35A428",
+"x 	c #030A02",
+"y 	c #133A0E",
+"z 	c #1D5B16",
+"A 	c #26761D",
+"B 	c #2B8520",
+"C 	c #39FCFC",
+"D 	c #061405",
+"E 	c #0D2809",
+"F 	c #15400F",
+"G 	c #1C5615",
+"H 	c #1F6117",
+"I 	c #35EAEA",
+"J 	c #061204",
+"K 	c #133D0F",
+"L 	c #1A5114",
+"M 	c #2ECBCB",
+"N 	c #081B06",
+"O 	c #10320C",
+"P 	c #1B5314",
+"Q 	c #236E1B",
+"R 	c #287B1E",
+"S 	c #37F4F4",
+"T 	c #29B6B6",
+"U 	c #135656",
+"V 	c #0E2B0A",
+"W 	c #194F13",
+"X 	c #2F9123",
+"Y 	c #000202",
+"Z 	c #133B0E",
+"` 	c #226919",
+" .	c #36A628",
+"..	c #000101",
+"+.	c #0A1E07",
+"@.	c #164410",
+"#.	c #216819",
+"$.	c #2F9023",
+"%.	c #37AB2A",
+"&.	c #329C26",
+"*.	c #184912",
+"=.	c #2F9224",
+"-.	c #2E8E23",
+";.	c #010501",
+">.	c #040E03",
+",.	c #0D2A0A",
+"'.	c #12390E",
+").	c #154210",
+"!.	c #1C5815",
+"~.	c #000100",
+"{.	c #030B05",
+"].	c #020701",
+"^.	c #051004",
+"/.	c #050F03",
+"(.	c #010505",
+"_.	c #DD1313",
+":.	c #EA1414",
+"<.	c #E41313",
+"[.	c #DF1313",
+"}.	c #B80F0F",
+"|.	c #460606",
+"1.	c #9F0D0D",
+"2.	c #FF1616",
+"3.	c #F81515",
+"4.	c #E21313",
+"5.	c #DE1313",
+"6.	c #A10E0E",
+"7.	c #B10F0F",
+"8.	c #F91515",
+"9.	c #B51010",
+"0.	c #B91010",
+"a.	c #F01414",
+"b.	c #F11515",
+"c.	c #E11313",
+"d.	c #EE1414",
+"e.	c #C81111",
+"f.	c #F31515",
+"g.	c #ED1414",
+"h.	c #D11212",
+"i.	c #B11010",
+"j.	c #3D0B0B",
+"k.	c #D21313",
+"l.	c #D91313",
+"m.	c #A70F0F",
+"n.	c #E91414",
+"o.	c #F71515",
+"p.	c #F61515",
+"q.	c #A91010",
+"r.	c #090909",
+"s.	c #B81010",
+"t.	c #DA1313",
+"u.	c #DB1313",
+"v.	c #9F0F0F",
+"w.	c #EF1515",
+"x.	c #820D0D",
+"y.	c #9F1010",
+"z.	c #0A0A0A",
+"A.	c #C11212",
+"B.	c #E51414",
+"C.	c #B41010",
+"D.	c #840F0F",
+"E.	c #F51515",
+"F.	c #810D0D",
+"G.	c #950F0F",
+"H.	c #E71414",
+"I.	c #D61313",
+"J.	c #901010",
+"K.	c #C81313",
+"L.	c #7B1111",
+"M.	c #DE1414",
+"N.	c #A01010",
+"O.	c #EC1414",
+"P.	c #F11414",
+"Q.	c #991010",
+"R.	c #E41414",
+"S.	c #931010",
+"T.	c #DD1414",
+"U.	c #C41212",
+"V.	c #0B0B0B",
+"W.	c #8A1010",
+"X.	c #0E0E0E",
+"Y.	c #7A1111",
+"Z.	c #450C0C",
+"`.	c #490C0C",
+" +	c #880E0E",
+".+	c #400C0C",
+"++	c #E31414",
+"@+	c #E11414",
+"#+	c #821111",
+"$+	c #7F1111",
+"%+	c #801111",
+"&+	c #831111",
+"*+	c #851111",
+"=+	c #3E0E0E",
+"-+	c #D71414",
+";+	c #0C0C0C",
+">+	c #8E1010",
+",+	c #791111",
+"'+	c #BD1313",
+")+	c #BF1313",
+"!+	c #D31414",
+"~+	c #6C0F0F",
+"{+	c #AB1111",
+"]+	c #EE1515",
+"^+	c #941212",
+"/+	c #0F0F0F",
+"(+	c #0D0D0D",
+"_+	c #611010",
+":+	c #3D0E0E",
+"<+	c #D51414",
+"[+	c #881111",
+"}+	c #370E0E",
+"|+	c #B31212",
+"1+	c #A51111",
+"2+	c #E01414",
+"3+	c #A51212",
+"4+	c #861111",
+"5+	c #380E0E",
+"6+	c #891111",
+"7+	c #D61414",
+"8+	c #8B1111",
+"9+	c #AC1010",
+"0+	c #390D0D",
+"a+	c #D51313",
+"b+	c #840E0E",
+"c+	c #AF1212",
+"d+	c #871010",
+"e+	c #3A0D0D",
+"f+	c #5C1010",
+"g+	c #B01313",
+"h+	c #C81414",
+"i+	c #C91414",
+"j+	c #CC1414",
+"k+	c #400E0E",
+"l+	c #D81414",
+"m+	c #6F0F0F",
+"n+	c #E21414",
+"o+	c #AF1111",
+"p+	c #A11111",
+"q+	c #CB1313",
+"r+	c #B51212",
+"s+	c #610F0F",
+"t+	c #9A1010",
+"u+	c #A41111",
 "                                                                                                ",
 "                                                                                                ",
 "                                                                                                ",
 "                                                                                                ",
 "                                                                      .                         ",
 "            + + + + + + + + + + + + + + + + + + + + + + + + + + + + + @ + + + + +               ",
-"            + + + + + + + + + + + + + + + + + + + + + + + + + + + + + # + + + + +               ",
-"            + + + + + + + + + + + + + + $ % % % % $ + + + + + + + + + & + + + + +               ",
-"            + + + + + + + + + + + + $ % * = - - = * % $ + + + + + + + ; + + + + +               ",
-"            + + + + + + + + + + + $ > , ' ) ! ! ) ' , > $ + + + + + + ; + + + + +               ",
-"          . @ # & ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; & # @ .             ",
-"            + + + + + + + + + + $ ~ { ] ^ / ( ( / ^ ] { ~ $ + + + + + ; + + + + +               ",
-"            + + + + + + + + + + _ : < [ } | 1 1 | } [ < : _ + + + + 2 ; 2 2 3 4 5               ",
-"            + + + + + + + + + + > 6 7 8 9 0 2 2 2 2 2 2 2 2 2 2 2 2 2 ; 2 2 3 4 5               ",
-"            + + + + + + + + + + > a b c d 0 2 2 2 2 2 2 2 2 2 2 2 2 2 ; 2 2 3 4 5               ",
-"            + + + + + + + + + + > e f g h i j 2 2 2 2 2 2 2 2 2 2 2 2 ; + + + + +               ",
-"            + + + + + + + + + + k = ) l m n o o n m l ) = k + + + + + ; + + + + +               ",
-"            + + + + + + + + + + + p 6 q r s t t s r q 6 p + + + + + + u + + + + +               ",
-"            + # + ; + ; + ; + + + % v w x y z z y x w v % + + + + + + A + + + + +               ",
-"            + + + + + + + + + + + % B { C D r r D C { B % + + + + + + E + + + + +               ",
-"            + # + ; + ; + ; + + + p F G H I J J I H G F p + + + + + + K L ; & # @ .             ",
-"            + + + + + + + + + + % M N O s P Q Q P s O N M % + + R + + + + + + + +               ",
-"            + + + + + ; + ; + + _ F S T P U 0 0 U P T S F _ + + V + + + + + + + +               ",
-"            + + + + + + + + + + _ W X s Q 0 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 + + +               ",
-"            + + + + + ; + ; + + _ W X s Q 0 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 3 + +               ",
-"            + + + + + + + + + + _ F S Y Z U ` ` j j 3 3 3 3 3 3 3 3 3 3 3 3 0 Q +               ",
-"            + + + + + # + # + + %  ...+.@./ ( ( / @.+... .% + + + + + + 4 4 Q Z +               ",
-"            + + + + + + + + + + + #.B $.%.&.*.*.&.%.$.B #.+ + + + + + + 5 5 =.-.+               ",
-"                                                                                                ",
-"                                                                                                ",
-"                                                                                                ",
-"                                                                                                ",
-"              ;.;.;.                                      ;.;.                                  ",
-"          ;.;.;.;.;.;.                                    ;.;.                                  ",
-"        ;.;.                                              ;.;.                                  ",
-"        ;.;.                ;.;.;.          ;.    ;.;.    ;.;.  ;.;.      ;.;.        ;.        ",
-"      ;.;.                ;.;.  ;.;.;.    ;.;.;.;.;.;.;.  ;.;.;.;.;.;.    ;.;.;.      ;.        ",
-"      ;.;.          ;.  ;.;.      ;.;.    ;.;.;.;.  ;.;.  ;.;.;.  ;.;.;.    ;.;.    ;.;.        ",
-"      ;.;.        ;.;.;.;.;.;.;.;.;.;.    ;.;.;.          ;.;.      ;.;.    ;.;.    ;.          ",
-"        ;.;.      ;.;.;.;.;.              ;.;.            ;.;.      ;.;.    ;.;.;.;.;.          ",
-"        ;.;.;.    ;.;.  ;.;.              ;.;.            ;.;.    ;.;.;.      ;.;.;.            ",
-"          ;.;.;.;.;.;.    ;.;.;.;.;.;.    ;.;.            ;.;.;.;.;.;.        ;.;.;.            ",
-"              ;.;.;.        ;.;.;.;.        ;.            ;.    ;.;.            ;.              ",
-"                                                                                                ",
+"            + + + + + + + + + + + + + + + + + + + + + + + + + + + + + # + + + + + +             ",
+"            + + + + + + + + + + + + + + $ % % % % $ + + + + + + + + + & + + + + + +             ",
+"            + + + + + + + + + + + + $ % * = - - = * % $ + + + + + + + ; + + + + + +             ",
+"            + + + + + + + + + + + $ > , ' ) ! ! ) ' , > $ + + + + + + ; + + + + + + +           ",
+"          ~ { # & ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; ; & # ] ^ /           ",
+"          + + + + + + + + + + + $ ( _ : < [ } } [ < : _ ( $ + + + + + ; + + + + + + +           ",
+"          + + + + + + + + + + + | 1 2 3 4 5 6 6 5 4 3 2 1 | + + + + 7 ; 7 7 8 9 0 a + +         ",
+"          + + + + + + + + + + + > b c d e f 7 7 7 7 7 7 7 7 7 7 7 7 7 ; 7 7 8 9 g a + +         ",
+"          + + + + + + + + + + + > h i j k f 7 7 7 7 7 7 7 7 7 7 7 7 7 ; 7 7 8 9 g l + +         ",
+"          + + + + + + + + + + + > m n o p q r 7 7 7 7 7 7 7 7 7 7 7 7 ; + + + + + + + +         ",
+"          + + + + + + + + + + + s = ) t u v w w v u t ) = s + + + + + ; + + + + + + + +         ",
+"          + + + + + + + + + + + + x b y z A B B A z y b x + + + + + + C + + + + + + + +         ",
+"          + + # + ; + ; + ; + + + % D E F G H H G F E D % + + + + + + I + + + + + + + +         ",
+"          + + + + + + + + + + + + % J _ K L z z L K _ J % + + + + + + M + + + + + + + +         ",
+"          + + # + ; + ; + ; + + + x N O P Q R R Q P O N x + + + + + + ] S ; & # T U + +         ",
+"          + + + + + + + + + + + % l V W A X 9 9 X A W V l % + + Y + + + + + + + + + + +         ",
+"          + + + + + + ; + ; + + | N Z ` X  .f f  .X ` Z N | + + ..+ + + + + + + + + + +         ",
+"          + + + + + + + + + + + | +.@.A 9 f 7 7 7 7 7 7 7 7 7 7 7 7 7 7 7 7 + + + + + +         ",
+"          + + + + + + ; + ; + + | +.@.A 9 f 7 7 7 7 7 7 7 7 7 7 7 7 7 7 7 7 8 + + + + +         ",
+"          + + + + + + + + + + + | N Z #.$. .%.%.r r 8 8 8 8 8 8 8 8 8 8 8 8 f &.+ + + +         ",
+"            + + + + + # + # + + % l _ *.< B =.=.B < *._ l % + + + + + + 9 9 &.-.+ + + +         ",
+"            + + + + + + + + + + + ;.>.1 ,.'.).).'.,.1 >.;.+ + + + + + + !.!.!.L + + +           ",
+"              + + + + + + + + + + + ~.$ % s {.].s % $ ~.+ + + + + + + + + ^.^./.+ + +           ",
+"                + + + + + + + + + + + + + (...+ + + + + + + + + + + + + + + + + + + +           ",
+"                  + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + +             ",
+"                      + + + + + + + + + + + + + + + + + + + + + + + + + + + +                   ",
+"            _.:.<.[.}.|.                                1.2.2.                                  ",
+"          2.2.3.4.5.2.6.                                7.2.2.                                  ",
+"        8.2.9.                                          0.2.2.                                  ",
+"      a.2.b.                c.d.d.e.      <.f.    d.g.h.i.2.2.j.k.l.m.    a.n.        o.        ",
+"      p.2.q.  r.          2.b.s.t.2.u.    d.2.8.2.2.2.c.v.2.2.w.2.2.2.x.  2.2.5.      3.        ",
+"      f.2.y.z.z.  A.B.C.2.o.D.    2.E.F.  B.2.2.t.G.H.I.J.2.2.K.L.M.2.B.  N.2.O.    b.c.        ",
+"      P.2.Q.z.z.  R.2.R.2.2.2.2.2.2.2.S.  T.2.U.V.V.V.V.W.2.2.X.X.Y.2.2.V.z.2.2.Z.`.2. +        ",
+"      5.2.2..+z.  ++2.M.2.@+#+$+%+&+*+=+V.-+2.W.;+;+V.z.>+2.2.X.X.,+2.2.;+V.k.2.'+)+f.          ",
+"        w.2.!+~+  M.2.{+2.]+^+/+X.(+_+:+;+<+2.[+;+V.z.  Q.2.2.}+(+K.2.|+;+V.1+2.2.2+3+V.        ",
+"          2.2.2.2.2.2.4+5+2.2.2.2.2.2.6+(+7+2.8+;+z.    9+2.2.2.2.2.2.0+;+z.r.a+2.2.;+;+        ",
+"          b+c+!+k.k.d+e+(+f+g+h+i+j+4+k+  |+l+m+V.        n+o+p+q+r+s+V.V.r.  t+I.u+V.z.        ",
+"                V.V.V.V.;+;+;+;+;+V.V.V.                      z.V.V.V.z.            z.          ",
 "                                                                                                ",
 "                                                                                                ",
 "                                                                                                ",
