@@ -1,3 +1,10 @@
+2002-08-27  Anders Eriksson  <anders@umunet.org>
+
+	* src/gerbv.c, src/gerbv_screen.h, src/gerbv_icon.h: Calculate
+	  proper initial translation when doing autoscale. Center image.
+	  Added #define for extra 0.1 inches in autoscale. New icon image.
+	  Also added outline debugging code (within #ifdef's).
+
 2002-08-27  Andreas Andersson  <e92_aan@e.kth.se>
 
 	* src/drill.c: Minor change to the drill file format guessing
